--- a/java/21-zulu/Containerfile
+++ b/java/21-zulu/Containerfile
@@ -27,7 +27,7 @@ LABEL		author="Matthew Penner" maintainer="matthew@pterodactyl.io"
 LABEL		org.opencontainers.image.source="https://github.com/matthewpi/images"
 LABEL		org.opencontainers.image.licenses=MIT
 
-RUN			microdnf install -y fontconfig glibc-langpack-en iproute openssl shadow-utils sqlite tar \
+RUN			microdnf install -y fontconfig glibc-langpack-en iproute openssl shadow-utils sqlite tar jq \
 				&& microdnf update -y \
 				&& adduser --home-dir /home/container container \
 				&& rpm --install https://cdn.azul.com/zulu/bin/zulu-repo-1.0.0-1.noarch.rpm \
