--- a/java/21-zulu/Containerfile
+++ b/java/21-zulu/Containerfile
@@ -19,7 +19,6 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-
 FROM		--platform=$TARGETOS/$TARGETARCH registry.access.redhat.com/ubi9/ubi-minimal:latest
 
 LABEL		author="Matthew Penner" maintainer="matthew@pterodactyl.io"
@@ -41,9 +40,13 @@ ENV			LC_ALL=en_US.UTF-8
 
 ENV			JAVA_HOME=/usr/lib/jvm/zulu21-ca
 
-USER		container
+USER root
+RUN chmod -R u+w /home/container
+USER container
 ENV			USER=container HOME=/home/container
 WORKDIR		/home/container
+
+
 
 COPY		./entrypoint.sh /entrypoint.sh
 CMD			[ "/bin/bash", "/entrypoint.sh" ]
